--- a/src/Components/ContactItem/ContactItem.css
+++ b/src/Components/ContactItem/ContactItem.css
@@ -1,3 +1,13 @@
 .icon{
     color:rgb(255, 179, 0);
 }
+
+.trash{
+    color: rgb(158, 41, 41);
+}
+
+i {
+    margin:10px;
+    margin-top: 20px;
+    cursor: pointer;
+}
